instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: value color
setCouleurBrosse(c:color.blue)
                   ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:color.blue)
                 ^